assets/css/company.css
.side-text {
  width: 30%;
  z-index: 1;
}

.side-text h1 p {
  margin: 0px;
  font-size: 3.8rem;
  line-height: 3.8rem;
}

.heading-keyword {
  font-style: oblique;
  font-weight: bold;
  letter-spacing: 0.225rem;
}

.side-text h1 {
  margin-top: 0.6rem;
}

.side-text-paragraph {
  font-size: 1.3rem;
  width: 61%;
}

.main-view {
  margin-top: 5vh;
  justify-content: space-between;
  align-items: unset;
}

.main-image {
  position: relative;
  margin-right: 4vw;
}

.background {
  width: 100%;
}

.foreground {
  width: 100%;
  position: absolute;
  left: 0px;
  top: 0px;
  opacity: 0.25;
  animation: 4s glow linear 0s infinite;
}

.section-footer-heading {
  font-size: 1.25rem;
  flex-direction: row;
  justify-content: space-evenly;
}

.section-footer-middle {
  font-size: 1.25rem;
  letter-spacing: 0.3rem;
  height: 100%;
  flex-direction: column;
  justify-content: space-around;
}

.location-name {
  letter-spacing: 0.3rem;
}

.location-info {
  text-align: left;
  width: 70%;
}

.section-footer-heading p {
  margin: 0px;
}

.section-footer .location-image {
  height: auto;
  width: 30%;
}

.section-footer a {
  color: #ccc;
}

.section-footer-middle {
  margin-bottom: 1rem;
}

.section-footer-middle p {
  margin: 0px;
}

.mission-section {
  margin-top: 10vh;
  display: grid;
  grid-template-columns: 12% 30% 6% 40% 12%;
  grid-template-rows: 50% 50%;
}

.mission-statement {
  grid-column-start: 2;
  grid-row-start: 1;
  grid-row-end: 3;
  background: #eee;
  padding: 2rem 2.5rem;
  font-size: 1.6rem;
  overflow: hidden;
}

.mission-statement p {
  margin-top: 0px;
  line-height: 2.75rem;
}

.mission-statement p:last-child {
  margin: 0px;
}

.grid-wrapper {
  grid-column-start: 4;
  grid-row-start: 1;
}

.person-box {
  position: relative;
  width: 100%;
}

.desk-person {
  width: 100%;
  height: 100%;
}

.network-box {
  grid-column-start: 4;
  grid-row-start: 2;
  text-align: center;
  width: 100%;
  letter-spacing: 0.75rem;
  color: #ccc;
}

.network-box h2 {
  margin-bottom: 0px;
}

.check {
  position: absolute;
  width: 100%;
  left: 0px;
  top: 0px;
  opacity: 0;
}

.check1.visible {
  animation: 0.25s check linear 0s forwards;
}

.check2.visible {
  animation: 0.25s check linear 0.25s forwards;
}

.check3.visible {
  animation: 0.25s check linear 0.5s forwards;
}

.cities-block {
  background-image: url("../images/company/Network-Icon.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  width: 100%;
  text-align: center;
  display: flex;
  flex-direction: column;
}

.cities-row {
  /* width: 25%; */
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  height: auto;
}

.cities-row img {
  width: 20%;
  height: auto;
}

.leadership-heading {
  font-size: 3rem;
  letter-spacing: 1rem;
  text-align: center;
  margin: 5rem 0px 3rem;
}

.leadership-carousel.visible {
  animation: 20s carousel 0s linear both infinite;
}

.leadership-carousel {
  width: 80%;
  margin: 0px auto;
  display: flex;
  flex-direction: row;
  overflow-x: auto;
  -ms-overflow-style: none;
}

.leadership-carousel::-webkit-scrollbar {
  display: none;
}

.carousel-page {
  width: 100%;
  flex: 0 0 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
}

.leadership-row {
  width: 100%;
  flex: 0 0 auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

.leadership-wrapper {
  flex: 0 0 auto;
  width: 20%;
}

.leadership-wrapper img {
  width: 100%;
}

.leadership-wrapper h1 {
  font-size: 1rem;
  margin-top: 0px;
}

@keyframes check {
  0% {
    transform: translateY(-50px);
    opacity: 0;
  }

  100% {
    transform: translateY(0px);
    opacity: 1;
  }
}

@keyframes glow {
  0% {
    opacity: 0.25;
  }

  50% {
    opacity: 1;
  }

  100% {
    opacity: 0.25;
  }
}

@media screen and (max-width: 1024px) {
  .section-footer .location-image {
    height: auto;
    width: 15%;
  }

  .landing-section {
    height: auto;
    min-height: 100vh;
    overflow: visible;
  }

  .main-view {
    flex-direction: column-reverse;
    justify-content: space-around;
    /* padding-top: 8vh; */
    margin: 0px;
    height: 100vh;
  }

  .main-image {
    width: 100%;
  }

  .landing-section .container {
    padding: 0px;
  }

  .side-text {
    text-align: left;
    width: 47%;
    margin: -15vh auto 0px;
  }

  .side-text h1 {
    width: 100%;
    margin: 0px auto 2rem;
  }

  .side-text h1 p {
    font-size: 4.5rem;
    line-height: 5rem;
  }

  .side-text-paragraph {
    margin: 0px auto;
    width: 90%;
    font-size: 2.25rem;
  }

  .section-footer {
    position: relative;
    background: #fff;
    bottom: -1px;
    width: calc(100% + 2px);
  }

  .section-footer .container {
    height: unset;
    flex-direction: column;
    justify-content: space-between;
    z-index: 1;
    align-items: center;
  }

  .section-footer-heading {
    order: 2;
    width: 100%;
    --section-footer-font-size: 2.25rem;
    font-size: var(--section-footer-font-size);
    line-height: calc(var(--section-footer-font-size) * 1.25);
    margin: 3rem 0px;
  }

  .section-footer-middle {
    order: 1;
    font-size: 2.25rem;
    margin: 3rem 0px;
  }

  .location-info {
    margin-left: -5rem;
    margin-right: -3rem;
    width: 50%;
  }

  .leadership-carousel {
    width: 100%;
    touch-action: pan-y;
  }

  .carousel-page {
    flex-direction: row;
    justify-content: space-evenly;
  }

  .leadership-row {
    flex-direction: column;
    width: 40%;
  }

  .leadership-wrapper {
    width: 100%;
  }

  .leadership-wrapper h1 {
    font-size: 1.5rem;
  }

  .mission-section {
    display: flex;
    flex-direction: column;
  }

  .mission-statement {
    margin: 5vh auto 0px;
    width: 80%;
  }

  .mission-statement p {
    font-size: 2.25rem;
    line-height: 4rem;
  }

  .network-box {
    margin: 4vh auto 2vh;
    width: 90%;
    order: 3;
  }

  .network-box h2 {
    font-size: 2rem;
    margin: 2vh 0px;
  }

  .grid-wrapper {
    order: 0;
  }

  .mission-statement {
    order: 1;
  }
}

@media screen and (max-width: 1024px) and (max-height: 960px) {
  .side-text {
    margin: -20vh auto 0px;
  }

  .side-text-paragraph {
    font-size: 2.25rem;
  }
}

@media screen and (max-width: 768px) {
  .main-view {
    padding-top: 7.5vh;
  }

  .side-text {
    width: 55%;
  }

  .side-text-paragraph {
    width: 83.5%;
  }

  .side-text h1 p {
    line-height: 4rem;
  }

  .section-footer-heading {
    --section-footer-font-size: 2.25rem;
  }

  .section-footer-middle {
    font-size: 2.25rem;
  }

  .section-footer .location-image {
    width: 18%;
  }

  .mission-statement {
    padding: 2rem 3rem;
  }

  .mission-statement p {
    font-size: 2rem;
  }
}

@media screen and (max-width: 510px) {
  .leadership-heading {
    letter-spacing: 0.85rem;
  }

  .main-image {
    position: absolute;
    top: 10vh;
  }

  .side-text {
    position: absolute;
    top: 55vh;
    width: 100%;
  }

  .side-text-paragraph {
    width: 76%;
    margin: 0px auto;
  }

  .side-text h1 {
    width: 70%;
    margin: 0px auto 2vh;
  }
}

@media screen and (max-width: 414px) {
  .location-info {
    margin-left: -2rem;
    margin-right: -2rem;
    width: 60%;
  }

  .mission-statement p {
    line-height: 3.5rem;
  }
}

@media screen and (max-width: 414px) and (min-height: 660px) {
  .side-text {
    top: 72vh;
  }
}

@media screen and (max-width: 414px) and (min-height: 800px) {
  .side-text {
    top: 65vh;
  }
}

@media screen and (max-width: 375px) {
  .side-text-paragraph {
    font-size: 2.5rem;
    line-height: 3.5rem;
  }

  .mission-section {
    margin-top: 5vh;
  }
}

@media screen and (max-width: 360px) {
  .mission-statement {
    padding: 2rem 2rem;
  }

  .side-text {
    top: 65vh;
  }
}

@media screen and (max-width: 325px) {
  .side-text {
    top: 60vh;
  }

  .side-text h1 {
    width: 80%;
  }
}

